force-app/main/default/objects/custom_create79__c/custom_create79__c.object-meta.xml
<CustomObject>
    <label>Custom created object79</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects79</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>