force-app/main/default/objects/custom_create79__c/fields/custom_create_79field563__c.field-meta.xml
<CustomField>
    <fullName>custom_create_79field563__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 79field563</label>
    <type>Checkbox</type>
</CustomField>